
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.94

   * pdb_insertions_go_first setting for handling structures where
     inserted residues come before, not after, the numbered residue.
     
   * Added support for older, binary-header O/DSN6 maps, including
     swap_dsn6_bytes setting (for unlikely scenarios).

Changes up to 0.93

   * Restored ability to read version 0.86 sessions with CGOs.

   * Fixed bug with O/BRIX map reading code.

   * Changed roving_origin behavior with respect to Z axis.

   * P5M file handling for browser helper (for Metaphorics, mostly).

Changes up to 0.92

   * added RPM support for "import pymol", fixed several bugs running
     PyMOL in this fashion, with or without a GUI.  

   * fixed alpha channel handling for transparent surfaces in ray tracer
     with a non-opaque background, with fog, and with both together.

   * added defer_updates setting to provide a gentler alternative
     to suspend_updates and which can allow a threading applications
     to process a series of cmd.do commands without unnecessary
     updates

   * fixed a couple annoying bugs in mpng command movie rendering
     COMPATIBILITY WARNING: mpng no longer automatically adds an 
     underscore to the movie filename prefix!

   * fixed Calcium detection for "CA+" residues

   * cmd.do updated to take multiple commands as a string or list of strings

   * increase the word length limit in the selector so that long lists
     of residues can be supplied.

   * new test case for PDB file IO (C0700odd), do command (c1100do)

   * WARNING: cmd.select API argument reordering may break existing code
